[workspace]
members = [
    "odra",
    "odra-vm",
    "core",
    "odra-macros",
    "odra-casper/rpc-client",
    "odra-casper/livenet-env",
    "odra-casper/wasm-env",
    "odra-casper/test-vm",
    "odra-schema",
    "odra-test",
    "odra-build"
]
exclude = [ "examples", "modules", "benchmark", "odra-casper/proxy-caller", "templates/blank", "templates/full", "templates/workspace", "tests"]
resolver = "2"

[workspace.package]
version = "1.1.0"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
homepage = "https://odra.dev/docs"
repository = "https://github.com/odradev/odra"

[workspace.dependencies]
odra-core = { path = "core", version = "1.1.0" }
odra-macros = { path = "odra-macros", version = "1.1.0" }
odra-casper-test-vm = { path = "odra-casper/test-vm", version = "1.1.0" }
odra-casper-rpc-client = { path = "odra-casper/rpc-client", version = "1.1.0" }
odra-vm = { path = "odra-vm", version = "1.1.0" }
odra-casper-wasm-env = { path = "odra-casper/wasm-env", version = "1.1.0"}
odra-schema = { path = "odra-schema", version = "1.1.0" }
casper-contract = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0",  default-features = false }
casper-contract-schema = { git = "https://github.com/odradev/casper-contract-schema.git", branch = "feature/casper-2.0" }
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0", default-features = false }
casper-execution-engine = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }
casper-engine-test-support = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }
casper-event-standard = "0.5.0"
blake2 = "0.10.6"
log = "0.4.20"
env_logger = "0.11.1"
serde = { version = "1.0.195", default-features = false }
serde_json = { version = "1.0.113", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
mockall = { version = "0.12.1" }
