[package]
name = "benchmark"
version = "2.0.0"
edition = "2021"

[dependencies]
odra = { path = "../odra" }
odra-test = { path = "../odra-test", optional = true }
odra-modules = { path = "../modules" }
base64 = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde_json = { workspace = true }

[[bin]]
name = "benchmark_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "benchmark_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "benchmark"
path = "bin/benchmark.rs"
test = false
required-features = ["odra-test"]

[[bin]]
name = "evaluate_benchmark"
path = "bin/evaluate_benchmark.rs"
test = false

[features]
default = []
benchmark = ["odra-test"]
