[package]
name = "odra-core" # Odra Core is new odra.
version = "0.1.0"
edition = "2021"

[dependencies]
casper-types = { workspace = true }
casper-event-standard = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { version = "1.0.195", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.111", default-features = false, features = ["alloc"] }

[dev-dependencies]
mockall = { version = "0.11.4" }
