[package]
name = "odra-core"
description = "Core of the Odra Framework"
edition = "2021"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
casper-types = { workspace = true }
casper-event-standard = { workspace = true }
num-traits = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { workspace = true, default-features = false, features = ["alloc", "derive"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
mockall = { version = "0.11.4" }

[lints.rust]
missing_docs = "warn"
