[package]
name = "odra-examples"
version = "0.8.0"
edition = "2021"

[dependencies]
odra = { path = "../odra", default-features = false }
odra-modules = { path = "../modules", default-features = false }
odra-casper-livenet-env = { path = "../odra-casper/livenet-env" }
sha3 = { version = "0.10.6", default-features = false }

[dev-dependencies]
odra-test = { path = "../odra-test" }
hex = "0.4.3"

[[bin]]
name = "odra_examples_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "odra_examples_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "erc20_on_livenet"
path = "bin/erc20_on_livenet.rs"

[[bin]]
name = "nested_modules_on_livenet"
path = "bin/nested_modules_on_livenet.rs"

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
