[package]
name = "odra-examples"
version = "1.1.0"
edition = "2021"

[dependencies]
odra = { path = "../odra", default-features = false }
odra-modules = { path = "../modules", default-features = false }
sha3 = { workspace = true }
odra-casper-livenet-env = { path = "../odra-casper/livenet-env", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { path = "../odra-build" }

[dev-dependencies]
odra-test = { path = "../odra-test" }
hex = { workspace = true }

[build-dependencies]
odra-build = { path = "../odra-build" }

[features]
default = []
livenet = ["odra-casper-livenet-env"]

[[bin]]
name = "odra_examples_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "odra_examples_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "erc20_on_livenet"
path = "bin/erc20_on_livenet.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "tlw_on_livenet"
path = "bin/tlw_on_livenet.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "cep18_on_livenet"
path = "bin/cep18_on_livenet.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "cep78_on_livenet"
path = "bin/cep78_on_livenet.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "livenet_tests"
path = "bin/livenet_tests.rs"
required-features = ["livenet"]
test = false

[lints.rust]
missing_docs = "warn"
