[package]
name = "examples2"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { path = "../odra" }

[[bin]]
name = "examples2_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "examples2_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
