[package]
name = "odra-mock-vm"
version = "0.0.1"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra"
description = "Odra's virtual machine for running smart contracts."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm", "smart contracts"]

[dependencies]
odra-types = { path = "../types" }
odra-utils = { path = "../utils" }
ref_thread_local = "0.1.1"
