[package]
name = "odra-mock-vm"
version = "0.1.0"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra"
description = "Odra's virtual machine for running smart contracts."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]

[dependencies]
odra-types = { version = "0.1.0", path = "../types", default-features = false, features = ["std"] }
odra-utils = { version = "0.1.0", path = "../utils", features = ["std"] }
ref_thread_local = "0.1.1"
