[package]
name = "odra-modules"
version = "1.1.0"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra"
description = "Collection of reusable Odra modules."
keywords = ["wasm", "webassembly", "blockchain"]

[dependencies]
odra = { path = "../odra", version = "1.1.0", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
serde-json-wasm = { workspace = true }
base16 = { workspace = true }
base64 = { workspace = true, features = ["alloc"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { path = "../odra-build" }

[dev-dependencies]
odra-test = { path = "../odra-test", version = "1.1.0" }
once_cell = "1"
blake2 = "0.10.6"

[build-dependencies]
odra-build = { path = "../odra-build", version = "1.1.0" }

[features]
default = []
disable-allocator = ["odra/disable-allocator"]

[[bin]]
name = "odra_modules_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "odra_modules_build_schema"
path = "bin/build_schema.rs"
test = false

[lints.rust]
missing_docs = "warn"

