[package]
name = "odra-modules"
version = "1.1.0"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra"
description = "Collection of reusable Odra modules."
keywords = ["wasm", "webassembly", "blockchain"]

[dependencies]
odra = { path = "../odra", version = "1.1.0", default-features = false }
serde = { version = "=1.0.195", default-features = false }
serde_json = { version = "=1.0.113", default-features = false }
serde-json-wasm = { version = "1.0.1", default-features = false }
base16 = { version = "0.2.1", default-features = false }
base64 = { version = "0.22.0", default-features = false, features = ["alloc"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { path = "../odra-build", version = "1.1.0" }

[dev-dependencies]
odra-test = { path = "../odra-test", version = "1.1.0" }
once_cell = "1"
blake2 = "0.10.6"

[build-dependencies]
odra-build = { path = "../odra-build", version = "1.1.0" }

[features]
default = []
disable-allocator = ["odra/disable-allocator"]

[[bin]]
name = "odra_modules_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "odra_modules_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3

[lints.rust]
missing_docs = "warn"
