[package]
name = "odra-modules"
version = "2.0.0"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra"
description = "Collection of reusable Odra modules."
keywords = ["wasm", "webassembly", "blockchain"]

[dependencies]
odra = { path = "../odra", default-features = false }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false }
serde-json-wasm = { workspace = true }
base16 = { workspace = true }
base64 = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { path = "../odra-build" }

[dev-dependencies]
odra-test = { path = "../odra-test" }
once_cell = "1"
blake2 = "0.10.6"

[build-dependencies]
odra-build = { path = "../odra-build" }

[features]
default = []
disable-allocator = ["odra/disable-allocator"]

[[bin]]
name = "odra_modules_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "odra_modules_build_schema"
path = "bin/build_schema.rs"
test = false

[lints.rust]
missing_docs = "warn"

