[package]
name = "mycontract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odra = { path = "../core", default-features = false }

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm"]
wasm = ["odra/wasm"]
