[package]
name = "odra-build"
description = "Function used in build.rs files of Odra projects"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }