[package]
name = "odra-macros"
edition = "2021"
description = "Macros for Odra-based smart contracts."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.29", features = ["full"] }
syn_derive = "0.1.8"
convert_case = { version = "0.5.0" }

[dev-dependencies]
pretty_assertions = "1.4.0"
prettyplease = "0.2.15"

[lib]
proc-macro = true
