[package]
name = "odra-schema"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
casper-contract-schema = { git = "https://github.com/odradev/casper-contract-schema" }
casper-types = { workspace = true }
odra-core = { workspace = true }
num-traits = { workspace = true }

[lints.rust]
missing_docs = "warn"