[package]
name = "odra-schema"
edition = "2021"
description = "Generates Casper Contract Schema from Odra contracts."
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
casper-contract-schema = { workspace = true }
casper-types = { workspace = true }
odra-core = { workspace = true }
num-traits = { workspace = true }
convert_case = { workspace = true }

[lints.rust]
missing_docs = "warn"
