[package]
name = "odra-test"
edition = "2021"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
odra-core = { workspace = true }
odra-casper-test-vm = { workspace = true }
odra-vm = { workspace = true }