[package]
name = "odra-test"
description = "Test backend for the Odra smart contracts."
edition = "2021"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
odra-core = { workspace = true }
odra-casper-test-vm = { workspace = true }
odra-vm = { workspace = true }

[lints.rust]
missing_docs = "warn"
