[package]
name = "odra-test"
description = "Test backend for the Odra smart contracts."
edition = "2021"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
odra-core = { workspace = true }
odra-casper-test-vm = { workspace = true }
odra-vm = { workspace = true }
cucumber = { version = "0.21.1", features = ["libtest", "macros"], optional = true  }
gherkin = { version = "0.14.0", optional = true } 
futures = { version = "0.3.5", features = ["thread-pool"], optional = true  }
regex = { version = "1.8.3", optional = true }
derive_more = { version = "0.99.11", optional = true}

[lints.rust]
missing_docs = "warn"

[features]
default = []
bdd = ["cucumber", "gherkin", "futures", "regex", "derive_more"]

[[test]]
name = "test_counter"
harness = false
