[package]
name = "odra-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
odra-core = { path = "../core" }
anyhow = "1.0.75"
url = "2.4.1"
blake2 = { workspace = true }

[dev-dependencies]
odra = { path = "../odra" }