[package]
name = "odra-vm"
edition = "2021"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
odra-core = { workspace = true }
anyhow = "1.0.75"
url = "2.4.1"
blake2 = { workspace = true }

[dev-dependencies]
odra-test = { path = "../odra-test" }