[package]
name = "odra"
edition = "2021"
description = "Smart contracts for Casper Network."
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
odra-core = { workspace = true }
odra-macros = { workspace = true }
odra-schema = { path = "../odra-schema" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
odra-casper-wasm-env = { workspace = true }

[lints.rust]
missing_docs = "warn"

[features]
default = []
disable-allocator = ["odra-casper-wasm-env/disable-allocator"]
