[package]
name = "odra"
edition = "2021"
description = "Smart contracts for Casper Network."
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "../README.md"

[dependencies]
odra-core = { workspace = true }
odra-macros = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-schema = { workspace = true }

[lints.rust]
missing_docs = "warn"

[features]
default = []
disable-allocator = []
