[package]
name = "odra2"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
odra-core = { path = "../odra-core" }
odra-types = { path = "../types" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
odra-casper-backend2 = { path = "../odra-casper/backend2" }
