[package]
name = "odra2"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
odra-core = { path = "../odra-core" }
odra-types = { path = "../types" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
odra-casper-backend2 = { path = "../odra-casper/backend2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-casper-test-env2 = { path = "../odra-casper/test-env2", optional = true }

odra-vm-backend = { path = "../odra-vm/backend", optional = true }
odra-vm-test-env = { path = "../odra-vm/test-env", optional = true }

[features]
default = ["odra-vm"]
odra-vm = ["odra-vm-backend", "odra-vm-test-env"]
casper = ["odra-casper-backend2", "odra-casper-test-env2"]