[package]
name = "odra-primitives"
version = "0.1.0"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra"
description = "Collection of reusable modules"
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]

[dependencies]
odra-contract-env = { version = "0.1.0", path = "../env", default-features = false, optional = true }
odra-types = { version = "0.1.0", path = "../types" }

[features]
default = [ "mock-vm" ]
mock-vm = ["odra-contract-env/mock-vm" ]
wasm = [ "odra-contract-env/wasm"]
wasm-test = [  "odra-contract-env/wasm-test"]