[package]
name = "odra-test-env-wrapper"
version = "0.1.0"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra"
description = "Odra's wrapper for test virtual machines delivered as shared object files."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]

[dependencies]
odra-types = { version = "0.1.0", path = "../types", default-features = false, features = ["std"] }
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
