[package]
name = "derive-try-from"
edition = "2021"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
proc-macro2 = "1.0.69"
proc-macro-error = "1.0.4"
quote = "1.0.33"
syn = { version = "2.0.29", features = ["full"] }

[lib]
proc-macro = true
