[package]
name = "odra-types"
version = "0.4.0"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra"
description = "This crate exposes blockchain-agnostic types used along all the Odra crates."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]
