[package]
name = "odra-types"
edition = "2021"
description = "This crate exposes blockchain-agnostic types used along all the Odra crates."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
