[package]
name = "odra-utils"
version = "0.1.0"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra"
description = "Utilites used by the Odra crates."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]

[dependencies]
convert_case = "0.5.0"
