[package]
name = "odra-utils"
edition = "2021"
description = "Utilites used by the Odra crates."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
convert_case = { version = "0.5.0", optional = true }

[features]
std = [ "convert_case" ]