[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = []

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.37"
odra-examples = { path = ".." }
odra-casper-livenet = { path = "../../odra-casper/livenet" }
casper-types = "3.0.0"
odra-casper-types = { path = "../../odra-casper/types" }
hex = "0.4.3"
serde_json = "1.0.103"
odra-casper-codegen = { path = "../../odra-casper/codegen" }
serde_bytes = "0.11.12"
bincode = "1.3.3"

[build-dependencies]
serde_json = "1.0.103"
bincode = "1.3.3"

[lib]
crate-type = ["cdylib", "rlib"]
