[package]
name = "client"
version = "0.1.0"
authors = ["Kuba Płaskonka <kuba@odra.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.42"
odra-casper-rpc-client = { path = "../../odra-casper/rpc-client" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
curve25519-parser = "0.4.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

