[package]
name = "odra-codegen"
version = "0.2.0"
edition = "2021"
authors = ["Jakub Płaskonka <kuba@odra.dev>", "Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
repository = "https://github.com/odradev/odra"
description = "Code generators for Odra IR."
keywords = ["wasm", "webassembly", "blockchain"]
categories = ["wasm"]

[dependencies]
odra-utils = { version = "0.2.0", path = "../../utils", features = ["std"] }
odra-ir = { version = "0.2.0", path = "../ir" }
proc-macro2 = "1.0.40"
proc-macro-error = "1.0.4"
quote = "1.0.19"
syn = { version = "1.0.89", features = [ "full" ] }
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
convert_case = "0.5.0"
